--- a/0abstract.tex
+++ b/0abstract.tex
@@ -1,1 +1,4 @@
-Il Cloud Computing si è ormai affermato come paradigma fondante per la costruzione di infrastrutture di calcolo grazie alla possibilità di ottenere risorse di computazione sotto forma di servizi. Un mercato inizialmente composto da pochi Cloud provider conta ormai la presenza di numerosi di concorrenti, ognuno con la propria piattaforma e le proprie soluzioni. La volontà di sfruttare questa varietà di provider ha portato alla nascita del multi-cloud, ovvero l’utilizzo di più ambienti Cloud compresi in una singola architettura per ottenere maggiore affidabilità, un miglior rapporto qualità-prezzo e riducendo la dipendenza dal singolo. Tuttavia la forte diversità tra le API fornite per l'accesso ai vari servizi rende l'introduzione del multi-cloud particolarmente complessa per cui vi è la necessità di strumenti che ne facilitino l'utilizzo. È in questo ambito che nasce Fly, un Domain-Specific Language per il calcolo scientifico su multi-cloud il cui obiettivo è quello di semplificare lo sviluppo di applicazioni su Cloud introducendo un livello di astrazione aggiuntivo grazie al quale l'utente non necessita di conoscere le specifiche API del provider che vuole utilizzare. L'obiettivo di questo lavoro di tesi è di presentare due importanti funzionalità introdotte all'interno di Fly, ovvero la possibilità di utilizzare un ambiente di debug e il supporto alle sorgenti dati esterne. È infatti importante fornire un ambiente indipendente dal Cloud ma che ne simuli fedelmente il comportamento, in quanto lo sviluppo di applicazioni comprende l'esecuzione di numerosi test per verificarne il funzionamento, tuttavia eseguirli su Cloud comporta dei costi sia in tempo che in denaro. La soluzione sviluppata sfrutta LocalStack, un framework che consente di creare un ambiente AWS in locale completo di tutti i suoi servizi che l’utente può utilizzare come ambiente di test allo stesso modo di un ambiente su Cloud. La seconda parte della tesi riguarda il supporto alle sorgenti dati esterne, in particolare la possibilità di utilizzare all'interno dei programmi Fly sia file dati strutturati che database relazionali, siano essi in locale o su Cloud. In particolare vengono introdotti metodi per la gestione dei file e  dei database MySQL che comprendono il supporto alle query. L'implementazione di database su Cloud è possibile mediante il modello Database as a Service (DBaaS), in particolare Amazon Web Services offre il servizio Amazon RDS mentre Microsoft Azure mette a disposizione il servizio Azure for MySQL. Entrambi sono implementati all'interno di Fly utilizzando le soluzioni e gli strumenti più validi in base al contesto, sfruttando il grande vantaggio del modello DBaaS che consente di accedere ai database su Cloud allo stesso modo di come si farebbe con database locali.
+% Il Cloud Computing si è ormai affermato come paradigma fondante per la costruzione di infrastrutture di calcolo grazie alla possibilità di ottenere risorse di computazione sotto forma di servizi. Un mercato inizialmente composto da pochi Cloud provider conta ormai la presenza di numerosi di concorrenti, ognuno con la propria piattaforma e le proprie soluzioni. La volontà di sfruttare questa varietà di provider ha portato alla nascita del multi-cloud, ovvero l’utilizzo di più ambienti Cloud compresi in una singola architettura per ottenere maggiore affidabilità, un miglior rapporto qualità-prezzo e riducendo la dipendenza dal singolo. Tuttavia la forte diversità tra le API fornite per l'accesso ai vari servizi rende l'introduzione del multi-cloud particolarmente complessa per cui vi è la necessità di strumenti che ne facilitino l'utilizzo. È in questo ambito che nasce Fly, un Domain-Specific Language per il calcolo scientifico su multi-cloud il cui obiettivo è quello di semplificare lo sviluppo di applicazioni su Cloud introducendo un livello di astrazione aggiuntivo grazie al quale l'utente non necessita di conoscere le specifiche API del provider che vuole utilizzare. L'obiettivo di questo lavoro di tesi è di presentare due importanti funzionalità introdotte all'interno di Fly, ovvero la possibilità di utilizzare un ambiente di debug e il supporto alle sorgenti dati esterne. È infatti importante fornire un ambiente indipendente dal Cloud ma che ne simuli fedelmente il comportamento, in quanto lo sviluppo di applicazioni comprende l'esecuzione di numerosi test per verificarne il funzionamento, tuttavia eseguirli su Cloud comporta dei costi sia in tempo che in denaro. La soluzione sviluppata sfrutta LocalStack, un framework che consente di creare un ambiente AWS in locale completo di tutti i suoi servizi che l’utente può utilizzare come ambiente di test allo stesso modo di un ambiente su Cloud. La seconda parte della tesi riguarda il supporto alle sorgenti dati esterne, in particolare la possibilità di utilizzare all'interno dei programmi Fly sia file dati strutturati che database relazionali, siano essi in locale o su Cloud. In particolare vengono introdotti metodi per la gestione dei file e  dei database MySQL che comprendono il supporto alle query. L'implementazione di database su Cloud è possibile mediante il modello Database as a Service (DBaaS), in particolare Amazon Web Services offre il servizio Amazon RDS mentre Microsoft Azure mette a disposizione il servizio Azure for MySQL. Entrambi sono implementati all'interno di Fly utilizzando le soluzioni e gli strumenti più validi in base al contesto, sfruttando il grande vantaggio del modello DBaaS che consente di accedere ai database su Cloud allo stesso modo di come si farebbe con database locali.
+
+
+Kubernetes è una piattaforma portatile, estensibile e open-source per la gestione e l'ottimizzazione di applicativi Cloud-Native. Esso consente di orchestrare applicazioni containerizzate all'interno di cluster di nodi su cui vengono eseguiti, grazie agli strumenti ed alle API fornite, operazioni per la gestione del carico di lavoro, del traffico di rete e dell'archiviazione. Nonostante i vantaggi, Kubernetes rimane un sistema estremamente complesso ed articolato nella sua gestione architetturale ed implementativa. Fly è un linguaggio di programmazione domain-specific incentrato sul calcolo scientifico il cui obiettivo è quello di semplificare lo sviluppo di applicazioni su Cloud introducendo un livello di astrazione che permetta all'utente di utilizzare le funzionalità e le potenzialità del cloud provider in modo semplice ed efficiente. Questo lavoro di tesi si prefigge l'obiettivo dell'integrazione di un ambiente di esecuzione, basato su Kubernetes, all'interno del linguaggio di programmazione Fly, rendendo così possibile l'esecuzione del cluster in locale come su Cloud. L'intero processo di esecuzione può così essere automatizzato grazie a costrutti Fly appositamente sviluppati.
