--- a/00main.tex
+++ b/00main.tex
@@ -95,7 +95,7 @@ showstringspaces=false}
 {\large Tesi di Laurea di I livello in }\\[0.2truecm]
 {\Large Informatica}\\
 \vfill\vfill
-{\Huge ciao ijafh a}
+{\Huge Kubernetes in Fly}
 \vfill\vfill
 
 
