Introduzione: Cloud Computing completato [DA RIVEDERE]

--- a/1introduzione.tex
+++ b/1introduzione.tex
@@ -1,62 +1,70 @@
-Nell’ultimo decennio il Cloud Computing si è affermato come paradigma fondante per la costruzione di sistemi di computazione grazie ai vantaggi offerti da un modello di costo pay-as-you-go. La possibilità di ottenere risorse di computazione, acquistandole sotto forma di servizi, permette di eliminare la necessità di avere fisicamente un centro di calcolo insieme a tutti i costi di acquisto, configurazione e manutenzione che ne derivano. \\
-Durante l’evoluzione del Cloud Computing sono nati diversi modelli di servizio tra cui il modello \textbf{Infrastructure as a Service (IaaS)}, \textbf{Platform as a Service (PaaS)} e \textbf{Software as a Service (SaaS)}, divenuti ormai maturi e largamente utilizzati. Le applicazioni basate su questi modelli hanno permesso agli utenti di ricreare l’ambiente in esecuzione nelle proprie infrastrutture on-premise direttamente su Cloud senza la necessità di apportare particolari modifiche alle applicazioni. Questo, pur avendo velocizzato l’espansione del Cloud Computing, ha rallentato lo sviluppo di metodi che permettano di sfruttarne a pieno le caratteristiche, limitando la nascita di applicazioni appositamente progettate per il Cloud. In mancanza di questo cambio di paradigma, volto ad ottimizzare l'utilizzo del Cloud, gli sviluppatori si trovavano a dover gestire le risorse allo stesso modo di come avrebbero dovuto gestire un’infrastruttura fisica. Un nuovo modello di servizio si è quindi reso necessario, uno che permetta di utilizzare al meglio i vantaggi offerti dal Cloud Computing, ovvero il modello Function as a Service, anche noto come Serverless Computing. Nato come la naturale evoluzione dell’architettura basata su microservizi, il Serverless Computing è fondato sul concetto di funzione, una piccola porzione di codice indipendente che viene eseguita su Cloud in modo totalmente trasparente. Tale approccio permette di ottenere un forte disaccoppiamento garantendo una scalabilità senza eguali in linea con le necessità dei trend moderni come l’Internet of Things e il mondo mobile, noti per lavorare con numeri che possono crescere rapidamente. \\
-L’esplosione del mercato del Cloud ha portato alla nascita di numerosi Cloud Provider ognuno con la propria piattaforma e i propri servizi. Amazon con Aws, Microsoft con Azure e Google con GCP sono solo alcuni dei colossi che si contendono il mercato del Cloud Computing proponendo soluzioni diverse e ottimizzate per varie esigenze. La volontà di sfruttare questa varietà di provider ha portato alla nascita del multi-cloud, ovvero l’utilizzo di più piattaforme Cloud unificate in una singola architettura. Questo approccio permette di sfruttare i vantaggi che ogni provider fornisce, ottenendo maggiore affidabilità, un miglior rapporto qualità-prezzo e riducendo fortemente la dipendenza dal singolo, aspetto particolarmente critico del Cloud Computing. L’introduzione del multi-cloud comporta, tuttavia, anche una serie di criticità date soprattutto dalla forte diversità delle varie piattaforme Cloud. Infatti, nonostante i servizi disponibili siano simili, ogni Cloud provider fornisce le proprie \textbf{API (Application Programming Interface)} che possono essere anche completamente diverse rispetto agli altri. \\
-In questo capitolo verrà introdotto e descritto il paradigma del Cloud Computing, trattando dei diversi modelli di servizio disponibili con particolare attenzione al modello Function as a Service e al paradigma multi-cloud.
+%!TEX root = 00main.tex
+
+%To-Do%
+\section{Introduzione}
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 \section{Cloud Computing}
-Il Cloud Computing viene definito in modo differente da vari personaggi e sviluppatori, di conseguenza non c’è una definizione univoca e assoluta. Una definizione data da IBM, una delle aziende leader del settore, è la seguente:\\
-\textit{“Un Cloud è un insieme di risorse virtualizzate. Un Cloud può gestire diversi carichi di lavoro, da computazioni batch ad applicazioni interattive che interagiscono con gli utenti.”} \cite{CloudBook}.\\
-Sulla base di questa definizione un Cloud consente di gestire carichi di lavoro in modo facile e veloce, permettendo una scalabilità senza eguali potendo fornire macchine fisiche o virtuali all’istante. Il Cloud supporta modelli di programmazione ridondanti, altamente scalabili e capaci di gestire autonomamente errori. Oltre a ciò il Cloud fornisce il pieno controllo delle risorse che si utilizzano permettendo un monitoraggio in tempo reale al fine di bilanciare al meglio la distribuzione dei carichi di lavoro e delle risorse assegnate. \\
-L’utilizzo del Cloud Computing permette ad aziende e sviluppatori di non dover più investire grandi somme di denaro per le infrastrutture che normalmente sarebbero necessarie, piuttosto essi possono semplicemente noleggiare le risorse di cui hanno bisogno da grandi organizzazioni che possiedono potenti centri di calcolo e ne mettono a disposizione una parte sotto forma di servizi. Il grande vantaggio del Cloud Computing è permettere all’utente di accedere e lanciare applicazione da qualunque posto del mondo a costi molto bassi. \\
-La tecnologia alla base del Cloud Computing è la virtualizzazione, la quale permette di sfruttare appieno le capacità di un sistema di elaborazione in ogni momento. I grandi centri di calcolo in possesso delle aziende sono infatti progettati per gestire agevolmente i picchi di carico che si verificano in particolari momenti, tuttavia nel quotidiano non è necessario che essi vengano utilizzati alla loro massima potenza portando di fatto ad un sotto utilizzo. Tramite la virtualizzazione è possibile suddividere le risorse fisiche di una macchine in risorse virtuali più piccole che possono essere assegnate più agevolmente. Il Cloud Computing si basa proprio sull’affitto di queste risorse virtuali a vantaggio sia del consumatore che del provider. Da una parte il consumatore ha la possibilità di acquisire solo le risorse di cui ha bisogno e per il tempo necessario, evitando la necessità di avere un’infrastruttura propria, dall’altra il provider può far fruttare il proprio sistema fornendo una parte della sua potenza computazionale agli utenti. La virtualizzazione delle risorse permette di poter gestire in modo elastico le risorse, richiedendone in maggiore quantità per picchi di carico che necessitano di maggior potenza, al contrario utilizzandone in minor numero in fasi di lavoro meno intenso. Questo meccanismo consente un enorme risparmio all’utente finale, abilitando un pagamento basato sull’utilizzo, ma allo stesso tempo è un vantaggio per il provider che può sfruttare a pieno la grande infrastruttura che ha a disposizione.
-Scegliere di utilizzare il Cloud Computing per la costruzione delle proprie infrastrutture è particolarmente vantaggioso rispetto all’uso di sistemi on-premise. Oltre alla grande scalabilità ottenibile e all’eliminazione dei costi di investimento, manutenzione e aggiornamento si ottiene maggior efficienza energetica e una più vasta disponibilità sia geografica che in caso di guasti. Mediante l’utilizzo del Cloud la prossima generazione di centri di calcolo sarà progettata mediante l’utilizzo di risorse virtuali che vengono gestite e fornite in modo automatizzato, siano esse hardware, software, database, network o ambienti di runtime.\\
-Le architetture di Cloud Computing possono essere suddivise in tre modelli in base alle esigenze specifiche del contesto.
+\subsection{Panoramica}
+Il Cloud Computing è una particolare ed innovativa forma di erogazione di risorse da un fornitore ad un cliente attraverso la rete internet. Esso segue un paradigma architetturale di tipo distribuito ed i servizi offerti possono essere vari come l'archiviazione, la computazione oppure una semplice trasmissione dati.
+Le risorse e le configurazioni a cui fa fede, non sono predefinite ma, con l'utilizzo di processi automatizzati, ogni
+%Approssimativo perchè esiste anche la possibilità di crearsi la propria infrastruttura cloud%
+ Cloud Provider è in grado di personalizzare e scalare le risorse opportune per quel determinato servizio a quel determinato cliente. Una volta che quest'ultimo termina l'utilizzo delle risorse assegnate, queste tornano nuovamente disponibili, pronte per una nuova assegnazione.
 
+\subsection{Vantaggi}
+E' possibile individuare i maggiori vantaggi che motivano le aziende e gli sviluppatori ad utilizzare il Cloud Computing per i propri applicativi o per le proprie infrastrutture.
+%In realtà non è del tutto corretto perchè l'azienda può scegliere di costruirsi la propria infrastruttura su un Cloud locale%
+\subsubsection{Costi}
+E' chiaro che in quest'ottica, il modello economico Pay-as-you-go è diventato parte integrante della strategia di fruizione dei servizi, in quanto porta innumerevoli vantaggi ai fornitori ma sopratutto ai clienti stessi, tra cui:
+    \begin{itemize}
+    \item \textit{Ottimizzazione del capitale} - la libertà di pagare solo ciò di cui si ha realmente bisogno, l'eliminazione dei costi di investimento e dei costi di mantenimento ed il miglioramento dell'efficienza energetica permettono un notevole abbattimento dei costi ed un'ottimizzazione del capitale.
+    \item \textit{Flessibilità} - I clienti, in ogni momento ed in maniera quasi istantanea, hanno la massima libertà di poter annullare, sostituire o fermare qualsiasi servizio in corso.
+    \item \textit{Scalabilità} - Il sistema adottato, accompagna senza problemi la crescita di piccole infrastrutture. In effetti, per una Start-up agli inizi, è pratico dotarsi di uno strumento adeguato in termini di prezzi e funzionalità, per poi farlo crescere in parallelo con l'evoluzione e le ambizioni dell'azienda.
+    \end{itemize}
 
-\begin{description}
-    \item[Public Cloud]Di proprietà di grandi aziende come Amazon, Microsoft e Google, che offrono servizi accessibili tramite Internet e utilizzabili mediante apposite interfacce pubbliche, qualunque utente che ne abbia pagato i servizi può utilizzarli. Vantaggiosi sotto il punto di vista del costo e della scalabilità, il prezzo basato sul consumo permette di pagare solo per le risorse effettivamente utilizzate, disponibili in quantità virtualmente illimitata. I Cloud pubblici promuovono la standardizzazione, permettono di evitare l’investimento di capitale in infrastrutture dedicate e offrono alta flessibilità data la grande varietà dei servizi, tuttavia richiedono una certa fiducia del cliente verso il provider scelto in quanto dati e applicazioni sono, di fatto, in un sistema in possesso di un’azienda esterna.
-    
-    \item[Private Cloud]Costruito all’interno di un dominio circoscritto, è controllato e gestito completamente dall’azienda proprietaria che ne fornisce l’accesso solo alla propria rete interna. Non è pensato per la vendita di servizi all’esterno che invece sono accessibili solo mediante interfacce private. Forniscono un’alta personalizzazione e flessibilità in quanto l’infrastruttura viene progettata in modo specifico dall’azienda per l’azienda, ciò permette di ottenere alta efficienza e prestazioni. Data la totale indipendenza da terze parti un Cloud privato garantisce la massima sicurezza e privacy.
+\subsubsection{Performance e scalabilità}
+La tecnologia alla base del Cloud Computing è la virtualizzazione la quale, date le sue potenzialità, permette di ridimensionare agilmente le risorse assegnate. La potenza computazionale, la larghezza di banda e lo spazio di archiviazione sono esempi di risorse che possono essere scalate in base al carico di richieste, andando quindi ad allocarne una quantità maggiore in caso di maggiore attività, una quantità minore in caso di minore attività ed a deallocare quelle inutilizzate in caso di inattività prolungata.
 
-    \item[Hybrid Cloud]Formato dall’integrazione di un Cloud privato con i servizi forniti da un Cloud pubblico. L’accesso è controllato e avviene solo attraverso delle interfacce private, non essendo inteso come Cloud commerciale. Garantisce il miglior compromesso tra un elevato controllo, assicurato dall’infrastruttura privata, e alta scalabilità grazie all’integrazione di un Cloud pubblico. La combinazione dei due modelli permette, inoltre, di ottenere una maggiore flessibilità e sicurezza potendo sfruttare il Cloud privato per memorizzare dati sensibili e applicazioni critiche, attingendo dalle risorse del Cloud pubblico in caso di necessità.
-\end{description}
+\subsection{Modelli di servizio} %SEZIONE DA MODIFICARE ✌️%
+Nonostante la maturità del mercato del cloud computing, molte organizzazioni non sono ancora a conoscenza dei servizi di cloud computing e dei modelli di implementazione disponibili. Nuovi prodotti e servizi cloud arrivano quasi ogni giorno, spinti dalla costante innovazione delle tecnologie.
+Esistono tre modelli principali di servizi di cloud computing di cui ognuno rappresenta e delinea stack di servizi e responsabilità differenti.
 
-Fin dall’inizio del Cloud fu chiaro come questo paradigma rappresentasse un’opportunità di semplificare lo sviluppo e l’esecuzione di applicazioni a larghissima scala mantenendo i loro costi estremamente bassi se comparati con le soluzioni comunemente usate nell’High Performance Computing. Le applicazioni di calcolo scientifico sono comunemente sviluppate utilizzando linguaggi general-purpose oppure framework o linguaggi paralleli come il C, Java, Python, MPI e così via. Oltre a ciò i problemi di Calcolo Scientifico sono tipicamente computing-intensive e richiedono la potenza computazionale ottenibile da sistemi distribuiti come cluster o supercomputer. D’altra parte invece l’infrastruttura Cloud fornisce servizi general-purpose accessibile attraverso endpoint o API, mentre la applicazioni in ambito scientifico tipicamente non richiedono questi servizi ma piuttosto codice scritto appositamente che implementi algoritmi per risolvere problemi specifici. Nonostante molti Cloud provider abbiano recentemente inglobato nei loro servizi paradigmi come \textit{MapReduce} insieme a framework come \textit{Apache Hadoop}, molti problemi computing-intensive non sono adatti a questi paradigmi. In aggiunta, nonostante il Cloud offra soluzioni con un alto livello di scalabilità, molto spesso la migrazione di applicazioni di Calcolo Scientifico su modelli IaaS o PaaS rappresenta un processo complesso e tedioso, che può causare costi elevati, cosa che spesso va a precludere agli sviluppatori di ambito scientifico di sfruttare a pieno la scalabilità e l’efficienza del Cloud Computing \cite{ISISLab}.
+\subsubsection{Software as a Service (Saas)}
+Software as a Service (SaaS) è il modello di servizio cloud che fornisce l’accesso a un prodotto software completo, eseguito e gestito dal fornitore del servizio.
+L’accesso al software scelto utilizzando un modello SaaS consente di concentrarsi esclusivamente su come utilizzare al meglio tale software. Il fornitore SaaS è il responsabile della fornitura, della manutenzione e dell’aggiornamento del software, compresa l’infrastruttura sottostante. Un esempio comune di SaaS è una soluzione di Customer Relationship Management (CRM) basata sul web. Si memorizzano e gestiscono tutti i contatti tramite CRM senza dover aggiornare il software all’ultima versione o mantenere il server e il sistema operativo su cui il software è in esecuzione.
 
-\subsection{Modelli di servizio}
-I servizi offerti dai Cloud provider possono essere divisi in tre modelli principali, più un quarto che si sta affermando negli ultimi anni descritto nel Paragrafo \ref{Serverless}, ognuno dei quali fornisce un diverso livello di astrazione in base alle necessità dell'utente.
+\subsubsection{Platform as a Service (Saas)}
+Platform as a Service (PaaS) è il modello di servizio cloud in cui si accede a strumenti hardware e software combinati attraverso un fornitore di servizi. Il PaaS è usato più comunemente per lo sviluppo di applicazioni. Un fornitore PaaS vi dà accesso all’infrastruttura cloud combinata necessaria per lo sviluppo di applicazioni – database, middleware, sistemi operativi, server – senza la complessità di gestione che ne deriva. Questo vi permette di aumentare l’efficienza. Invece di dedicare tempo all’installazione e alla configurazione dell’infrastruttura, vi potete concentrare esclusivamente sullo sviluppo, l’esecuzione e la gestione delle applicazioni.
 
-\begin{description}
-    \item[Infrastructure as a Service (IaaS)]Il modello IaaS permette di ottenere le infrastrutture necessarie alle proprie esigenze sotto forma di macchine virtuali di cui è possibile specificare le caratteristiche in termini di potenza computazionale, storage e network. L’utente non controlla l’infrastruttura sottostante, quella che permette il funzionamento della macchina, tuttavia è responsabile di gestirla completamente in ogni suo aspetto, dal sistema operativo alle applicazioni che esegue. Attraverso questo modello è possibile configurare una macchina ad alte prestazioni o un cluster di grandi dimensioni per mandare in esecuzione una particolare applicazione.
-    
-    \item[Platform as a Service (PaaS)] Il modello PaaS fornisce delle piattaforme virtualizzate utilizzabili per la costruzione e l’esecuzione di applicazioni. Sono inclusi middleware, database, strumenti di sviluppo e ambienti di runtime come ad esempio Java o Web 3.0. Mediante l’utilizzo di appositi strumenti ed API l’utente può gestire completamente la piattaforma che include hardware e software completamente gestiti. Questo modello è considerato come una piattaforma di sviluppo per il supporto del ciclo di vita di un software permettendo di sviluppare, eseguire e gestire nuove applicazioni.
+\subsubsection{Infrastructure as a Service (Saas)}
+Infrastructure as a Service (IaaS) è il modello di servizio che costituisce la base per l’implementazione della tecnologia cloud. Attraverso un provider IaaS, ottenete l’accesso on-demand via internet alle risorse IT principali, compresi i computer (hardware virtuale o dedicato), il networking e l’archiviazione. IaaS vi offre l’accesso a una risorsa hardware flessibile e all’avanguardia che può essere scalata per soddisfare le esigenze di computing e archiviazione della vostra azienda. Utilizzate questa infrastruttura per fornire le applicazioni, il software e le piattaforme della vostra organizzazione: non dovete preoccuparvi della responsabilità di gestirla e mantenerla.
+Un tipico esempio di implementazione IaaS combinerà macchine virtuali e dischi di archiviazione. Ogni singolo elemento personalizzato è pensato per soddisfare le esigenze della vostra azienda, sia che si tratti del sistema operativo del server che delle dimensioni della capacità di archiviazione.
 
-    \item[Software as a Service (SaaS)] Il modello SaaS offre la possibilità di accedere ed utilizzare software pronti all’uso accessibili sotto forma di servizio Web tramite browser. Solleva l’utente da tutti gli oneri di acquisto e gestione di hardware e licenze software che utilizza direttamente il prodotto finale. I servizi compresi in questo modello appartengono ai campi più vari come business, applicazioni industriali, sistemi di collaborazione o servizi di posta elettronica.
+\subsection{Modelli di distribuzione} %SEZIONE DA MODIFICARE ✌️%
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 
-\end{description}
+\subsubsection{Public Cloud}
+Il Public Cloud è invece un modello di distribuzione di Cloud Computing in cui i servizi cloud sono di proprietà di un fornitore esterno. In questo caso, l’infrastruttura cloud è strutturata per l’uso aperto al pubblico e i servizi vengono messi a disposizione di più utilizzatori attraverso Internet.
+La configurazione di un Cloud Pubblico e quella di un Cloud Privato possono essere identiche.
+Le differenze risiedono, invece, nel fatto che un Public Cloud può essere configurato, distribuito e gestito più rapidamente. Questo abbatte i costi per l’acquisto, nonché per la gestione e la manutenzione dell’infrastruttura, portando a un notevole risparmio. Molti provider offrono, ad esempio, la possibilità di pagare a consumo solo per le risorse utilizzate.
+Il Public Cloud Computing garantisce anche una maggiore agilità operativa e una scalabilità pressoché illimitata, perché sfrutta le funzionalità e le risorse di calcolo e storage specifiche di grandi fornitori come Google, Microsoft e Amazon.
+Implementare un Cloud Pubblico permette poi a un’organizzazione di bypassare la responsabilità della gestione e della manutenzione dei sistemi e dell’infrastruttura, che ricadono sul fornitore. Questo solleva dal compito le organizzazioni, ma come abbiamo visto non è indicato per le aziende che operano in settori fortemente regolamentati e che hanno bisogno di un maggior controllo sulle risorse e i dati.
 
-\subsection{Serverless Computing} \label{Serverless}
-I tre modelli di servizio visti hanno permesso agli utenti di ricreare l’ambiente in esecuzione nelle infrastrutture on-premise direttamente su Cloud, senza la necessità di apportare particolari modifiche all'architettura delle proprie applicazioni. Questo, pur avendo velocizzato l’espansione del Cloud Computing, ha rallentato lo sviluppo di metodi che permettano di sfruttarne appieno le caratteristiche, limitando la creazione di applicazioni appositamente progettate per il Cloud. In mancanza di questo cambio di paradigma il risultato è stato che gli sviluppatori si trovavano a dover gestire le risorse su Cloud allo stesso modo di come avrebbero fatto con un’infrastruttura fisica. Era nata la necessità di un nuovo modello di servizio, uno che permetta di utilizzare al meglio i vantaggi offerti dal Cloud Computing, parliamo del modello Function as a Service (FaaS), anche noto come Serverless Computing. Diversamente da come il nome lascia intendere, lavorare con il paradigma Serverless non implica l’assenza di un server, ma fa riferimento al fatto che questo viene completamente gestito dal provider , eliminando la necessità di occuparsi della gestione dell’infrastruttura dietro un sistema, la sua manutenzione e progettazione \cite{MixedMethod}. \\
-Nato come la naturale evoluzione dell’architettura basata su microservizi, il Serverless Computing è fondato sul concetto di funzione, una piccola porzione di codice indipendente che viene eseguita su Cloud in modo totalmente trasparente all’utente. Essa diviene l’unico elemento su cui lo sviluppatore deve concentrarsi insieme con gli eventi che bisogna elaborare. Una funzione, infatti, gestisce un singolo evento per volta e questo ne aumenta la scalabilità e la semplicità di utilizzo, ottimizzando sia il carico di lavoro che i tempi di sviluppo. Essendo basato sugli eventi il paradigma Serverless viene definito un modello di programmazione event-driven, proprio perché ogni funzione viene eseguita in risposta ad uno specifico evento. Tale approccio permette di ottenere un forte disaccoppiamento in quanto le funzioni vengono eseguite solo quando ricevono l’evento a cui sono associate, ciò a vantaggio di produttività e risparmio \cite{ServerlessBook}. \\
-Lo sviluppatore di applicazioni Serverless deve considerare tutti gli aspetti compresi in questo paradigma, cambiando il modo con cui si approccia all’implementazione. Un’applicazione di questo tipo è formata da molteplici funzioni, una per ogni specifica funzionalità, e deve basarsi su una comunicazione ad eventi che il programmatore deve adeguatamente generare e gestire. Sarà compito del Cloud provider allocare le risorse necessarie al funzionamento dell’applicazione in base alle richieste del momento e al carico di lavoro. Ogni funzione, infatti, quando riceve l’evento che la invoca, viene mandata in esecuzione su un container stateless indipendente, creato e gestito completamente dal provider, che viene lanciato e poi spento all’occorrenza. Tramite containerizzazione di ottiene una scalabilità senza eguali grazie alla tecnologia di virtualizzazione, già ampiamente utilizzata nel Cloud Computing tramite macchine virtuali. Rispetto ad esse un container risulta eccezionalmente leggero, pesando soli pochi megabyte e richiedendo una quantità di risorse molto inferiore, di fatto necessitano solo di pochi secondi per avviarsi. \\
-Dal suo funzionamento è chiaro come il Serverless Computing fornisce numerosi vantaggi, consentendo di utilizzare in modo efficiente le risorse a disposizione, minimizzando il consumo di memoria e, di conseguenza, riducendo i costi. L’indipendenza tra le funzioni consente inoltre di ottenere un’alta modularità e scalabilità in linea con le necessità dei trend moderni come l’Internet of Things e il mondo mobile, noti per lavorare con numeri che possono crescere molto velocemente. Se con il Cloud Computing si elimina la necessità di avere e gestire l’hardware, con il Serverless Computing viene eliminato anche ogni componente software. Lo sviluppatore non deve occuparsi di alcun aspetto relativo all’infrastruttura ma può concentrarsi solamente sulla logica dell’applicazione, questo a beneficio di produttività e qualità. Aggiornamenti hardware o software, testing, versioning e qualsiasi altra forma di manutenzione vengono totalmente astratti in quanto completamente gestiti dal Cloud provider \cite{ServerlessBerkley}. 
+\subsubsection{Hybrid Cloud}
+L’Hybrid Cloud è l’utilizzo congiunto di implementazioni Public Cloud e Private Cloud.
+In sostanza, Cloud Pubblico e Privato restano due soggetti unici, e le organizzazioni possono sfruttare entrambi i modelli di distribuzione di Cloud Computing e/o scegliere il cloud da utilizzare in base alle esigenze specifiche dei dati.
+Ad esempio, possono utilizzare le risorse del Public Cloud per attività di computazione, e tenere al sicuro i dati sensibili e le applicazioni critiche nel Private Cloud. Oppure, di fronte a picchi improvvisi e temporanei della domanda di risorse, le organizzazioni possono scegliere di spostare i carichi di lavoro dal Private Cloud al Public Cloud, senza investire in nuove apparecchiature aggiuntive che rischierebbero di rimanere inattive o inutilizzate in futuro.
+Utilizzato in questo modo, l’Hybrid Cloud consente di ottenere il meglio da entrambe le infrastrutture.
+Il modello ibrido è in effetti scelto dalle aziende per ottimizzare le risorse esistenti in modo rapido, flessibile ed economico.
 
-\subsection{Multi-cloud}
-Il termine multi-cloud fa riferimento all’uso di diversi Cloud Provider combinati tra loro in una singola architettura eterogenea in cui carichi di lavoro, dati, applicazioni vengono distribuiti tra diversi ambienti Cloud. Varie sono le ragioni che portano alla progettazione di un’architettura multi-cloud tra cui la riduzione della dipendenza dal singolo provider, migliorare il rapporto costo-efficacia, aumentare la flessibilità di scelta, aderenza alle politiche locali che richiedono che i dati siano fisicamente presenti all’interno della propria regione, distribuzione geografica delle richieste di elaborazioni dal Cloud fisicamente più vicino per ridurre la latenza e la mitigazione di guasti. L’approccio multi-cloud, di fatto, rappresenta la consapevolezza che nessun provider può fornire il servizio giusto per ogni esigenza ma una combinazione di più ambienti Cloud può offrire maggiore flessibilità nella scelta dei servizi Cloud da usare.
-Il bisogno di diversi semplici requisiti come la disponibilità, costi ridotti o caratteristiche particolari ha portato al passaggio da un Cloud singolo ad un Cloud composto da più provider. Le aziende inoltre ricorrono al multi-cloud per ottenere la cosiddetta business continuity tramite la replicazione dell’intera architettura, o parte di essa, su ambienti diversi che possono funzionare in maniera active-active, ovvero tutti sono sempre attivi e si suddividono il carico di lavoro, o active-passive in cui vi è un ambiente attivo e uno di backup. Utilizzare i servizi di più Cloud provider permette, quindi, di replicare completamente applicazioni e servizi su piattaforme differenti, assicurando alta disponibilità e tolleranza in caso di guasti. \\
-Uno dei punti alla base del multi-cloud è il superamento del problema del vendor lock-in, ovvero la stretta dipendenza dal singolo provider di riferimento. La possibilità di scegliere tra una più ampia gamma di servizi permette di scegliere la soluzione più adatte all’esigenza specifica, evitando di dover modificare le applicazioni in base alle tecnologie disponibili, sfruttando piuttosto i servizi esclusivi di determinati provider \cite{MultiCloud2}. Scegliere un singolo Cloud provider dall’enorme mercato disponibile può limitare le possibilità implementative in quanto alcuni servizi possono essere non disponibili in uno specifico ambiente Cloud. Spesso, infatti, i Cloud provider forniscono servizi che abbracciano determinati piattaforme o tecnologie che possono essere non adeguate per particolari contesti \cite{MultiCloud}. \\
-I vantaggi offerti dal multi-cloud sono diversi, tra essi troviamo:
-\begin{itemize}
-    \item \textit{localizzazione} - controllo del posizionamento dei dati potendo scegliere l'area geografica in cui essi saranno memorizzati, optando per quelle con le legislazioni più conformi alle politiche interne;
-
-    \item \textit{scalabilità} - le risorse disponibili diventano virtualmente infinite potendo accedere a quelle messe a disposizione da più provider. Picchi di carico ed applicazioni complesse diventano così facili da gestire;
-    
-    \item \textit{disponibilità} - una maggiore tolleranza ai guasti è garantita dalla possibilità di replicare l’intera infrastruttura su un provider di backup, assicurando un sistema scalabile e con le stesse prestazioni anche in caso di guasti seri;
-    
-    \item \textit{flessibilità} - qualsiasi esigenza in termini di piattaforma o ambiente di sviluppo può essere soddisfatta potendo scegliere dai servizi offerti da diversi provider. Se un provider non fornisce il supporto necessario ad un contesto specifico si potrà facilmente vertere su un servizio offerto da un’altra piattaforma;
-        
-    \item \textit{risparmio} - possibilità di scegliere il servizio offerto dal provider più conveniente in modo indipendente, combinandoli tra loro per ottenere un ambiente fortemente costo-efficiente.
-
-    \item \textit{prestazioni} - applicazioni per cui la latenza è un aspetto critico possono spostare i carichi di lavoro verso server che siano fisicamente più vicini all’utente finale ottenendo così un miglior tempo di risposta.
-
-\end{itemize}
+\subsection{Private Cloud}
+Nel modello di distribuzione Private Cloud l’infrastruttura cloud viene messa a disposizione di una singola organizzazione che include più utenti. Le risorse sono condivise esclusivamente all’interno dell’organizzazione e gli utenti possono accedere al Cloud Privato tramite la rete Intranet aziendale o tramite una rete privata virtuale (VPN).
+Con il Private Cloud le organizzazioni mantengono un controllo completo dell’infrastruttura.
+Questo si traduce in una una maggiore sicurezza e in una personalizzazione dei servizi, che sono consumati all’interno del cloud: tutto per ottenere prestazioni conformi ai requisiti aziendali.
+Per questo il Private Cloud ben si adatta a quei settori dove sicurezza e requisiti di conformità, o normative, sono fattori fondamentali: in poche parole, a chi ha esigenze di compliance e sicurezza specifiche. Ad esempio, un’azienda può scegliere di utilizzare il Cloud Privato per archiviare i dati sensibili, implementando un livello di sicurezza e privacy più elevato.
+Scegliere un Private Cloud offre quindi molti vantaggi, ma questi benefici hanno un costo. Il modello di distribuzione di Cloud Computing prevede infatti un investimento maggiore per configurare l’infrastruttura.
